# aws-eventbridge-explorer

./: .pypirc.template  LICENSE  MANIFEST.in  PYPI_GUIDE.md  README.md  main.py  publish.sh  pyproject.toml  requirements.txt
docs/: prompts.md
eventbridge/: __init__.py  cli.py  core.py  web_server.py
eventbridge/static/: custom.css  log-observer.js  log-viewer.js  main.js  placeholder.txt
eventbridge/templates/: index.html
tests/: __init__.py  test_core.py
