[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-eventbridge-explorer"
version = "1.0.3"
description = "Where Events Meet Clarity - Interactive exploration tool for AWS EventBridge event buses, rules, and targets"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sergio Romano", email = "sergio.h.romano@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "boto3>=1.28.0",
    "networkx>=3.1",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "pygments>=2.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/sergiohromano/aws-eventbridge-explorer"
"Bug Tracker" = "https://github.com/sergiohromano/aws-eventbridge-explorer/issues"

[project.scripts]
eventbridge-explorer = "eventbridge.cli:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["eventbridge"]
include-package-data = true

[tool.setuptools.package-data]
"eventbridge" = ["templates/*.html", "static/**/*"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
